[package]
name = "gorfe"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde =  {  version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sentry = { version = "0.35.0", features = ["tracing"] }
axum-extra = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"